# pysolorie

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  quality_checks.yml
docs/: changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst
docs/reference/: modules.rst  pysolorie.atmospheric_transmission.rst  pysolorie.irradiance.rst  pysolorie.logger.rst  pysolorie.model.rst  pysolorie.numerical_integration.rst  pysolorie.observer.rst  pysolorie.plotter.rst  pysolorie.report.rst  pysolorie.rst  pysolorie.sun_position.rst
paper/: paper.bib  paper.md
src/pysolorie/: __init__.py  atmospheric_transmission.py  exceptions.py  irradiance.py  logger.py  model.py  numerical_integration.py  observer.py  plotter.py  report.py  sun_position.py
tests/: test_atmospheric_transmission.py  test_irradiance.py  test_model.py  test_numerical_integration.py  test_observer.py  test_plotter.py  test_pysolorie.py  test_report.py  test_sun_position.py
