[metadata]
name = pysolorie
version = 1.5.4
description = Orientation Analysis of Solar Panel
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaghamohammadi/pysolorie
author = Alireza Aghamohammadi
author_email = "Alireza Aghamohammadi" <al.aghamohammadi@gmail.com>
license = {file = "LICENSE" }
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules


[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    matplotlib>=3.8.2
    scipy>=1.11.4

[options.packages.find]
where = src
exclude =
    tests*

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 88

[tool:pytest]
testpaths = tests
addopts = --cov --strict-markers --cov-report=term --cov-report=xml
xfail_strict = True

[coverage:run]
source = pysolorie
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/pysolorie
    */site-packages/pysolorie

[tox:tox]
envlist = py39, py310, py311
isolated_build = True


[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
commands =
    mypy {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
    isort
commands =
    black {posargs:--check --diff src tests}
    isort {posargs:--check --diff src tests} --profile=black

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}

[testenv:docs]
deps =
    sphinx
    sphinx-rtd-theme
    sphinx-copybutton
commands =
    sphinx-build -W -b html docs/ docs/_build/

[testenv:shell]
deps =
    .[test]  # Install the test dependencies
commands =
    python
